data/all_generated_tests/raw_wast_tests/block_MismanagementofBlockNesting_2252.wast
;; 3. **Test Description**: Implement a nested block structure where nested `if` conditions branch (via `br_if`) to different block levels, with an edge case where the inner `if`'s branch condition is always false.    - **Constraint**: Ensure that `br_if` properly integrates with varying nesting depths and false branch conditions.    - **Nesting Mismanagement Check**: Confirms that nested branches with false conditions are managed accurately.

(assert_invalid
  (module (func $nested-br_if-false-condition
    (block (result i32)
      (i32.const 0)
      (block
        (block
          (if (result i32)
            (i32.const 0)
            (then (br_if 2 (i32.const 0)))
            (else (i32.const 1))
          )
          (i32.const 2)
        )
      )
    )
  ))
  "type mismatch"
)